[tool.poetry]
name = "once-per-worker"
version = "0.1.0"
description = "Create dask.delayed objects that only run once per worker"
authors = ["Gabe Joseph <gjoseph92@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<=3.11"
dask = {extras = ["delayed"], version = ">=2021.2.0,<=2022.9.0"}

[tool.poetry.dev-dependencies]
distributed = ">=2021.2.0,<=2022.9.0"
flake8 = "*"
black = "*"
dask = {extras = ["complete"], version = ">=2021.2.0,<=2022.9.0"}
graphviz = "*"
ipython = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
